<resources>
    <string name="app_name">Eggy</string>

    <string name="exit_hint">Press back again to exit</string>

    <string name="welcome_screen_title">Cook\neggs</string>
    <string name="welcome_screen_subtitle">as you like!</string>
    <string name="welcome_button">Let\'s cooking!</string>

    <string name="setup_title">Set <b>boiled details</b></string>
    <string name="setup_subtitle">Prepare eggs as you like!</string>
    <string name="setup_egg_temperature">Egg <b>temperature</b></string>
    <string name="setup_egg_temperature_fridge"><b>Fridge</b> temperature</string>
    <string name="setup_egg_temperature_room"><b>Room</b> temperature</string>
    <string name="setup_egg_size">Egg <b>size</b></string>
    <string name="setup_egg_size_S"><b>S</b></string>
    <string name="setup_egg_size_M"><b>M</b></string>
    <string name="setup_egg_size_L"><b>L</b></string>
    <string name="setup_egg_type">Egg <b>boiled type</b></string>
    <string name="setup_egg_type_soft"><b>Soft</b>\nboiled</string>
    <string name="setup_egg_type_medium"><b>Medium</b>\nboiled</string>
    <string name="setup_egg_type_hard"><b>Hard</b>\nboiled</string>
    <string name="setup_estimated_time">Estimated boiled time</string>

    <string name="cook_eggs_soft">Soft boiled eggs</string>
    <string name="cook_eggs_medium">Medium boiled eggs</string>
    <string name="cook_eggs_hard">Hard boiled eggs</string>
    <string name="cook_boiled_time">Boiled time</string>
    <string name="cook_water_temperature">Water temperature</string>
    <string name="cook_boiled_tip_title">Boiled Tip</string>
    <string name="cook_boiled_tip">After cooking, let the eggs rest in an ice-bath to \"shock\" them</string>
    <string name="cook_cancel">Cancel</string>
    <string name="cook_start">Start</string>

    <string name="time_empty">00:00</string>
    <string name="time_template">%1$s min</string>
    <string name="timer_notif_name">Egg timer</string>
    <string name="timer_notif_description">Notifies you when eggs are ready.</string>
    <string name="timer_notif_progress_name">Egg progress notificator</string>
    <string name="timer_notif_progress_description">Notifies you about progress of cooking</string>
    <string name="timer_notif_soft">Cooking soft egg</string>
    <string name="timer_notif_medium">Cooking medium egg</string>
    <string name="timer_notif_hard">Cooking hard egg</string>
    <string name="timer_notif_subtitle">Remains %1$s</string>
    <string name="timer_notif_finish_title">Egg is boiled!</string>
    <string name="timer_notif_finish_text">It\'s time! Bon appetite!</string>

    <string name="cancel_timer_alert">Are you sure you want cancel egg timer?</string>
    <string name="toast_finish_text">Egg is boiled! Bon appetite!</string>
    <string name="boiled_temperature">100C</string>

    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="colon">:</string>

    <string name="timer_minutes">\u0020MIN</string>
</resources>