<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingStart="30dp">

        <TextView
            android:id="@+id/text_setup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/monsterrat"
            android:text="@string/setup_title"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_setup_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:fontFamily="@font/monsterrat"
            android:text="@string/setup_subtitle"
            android:textColor="@color/colorGrayLight"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_setup_title" />

        <ImageView
            android:id="@+id/image_egg_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:src="@drawable/setup_egg_half"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_temperature_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/monsterrat"
            android:text="@string/setup_egg_temperature"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_egg_top" />

        <com.example.eggyapp.ui.checkable_views.CheckableButtonGroup
            android:id="@+id/group_temperature_buttons"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_temperature_title">

            <com.example.eggyapp.ui.checkable_views.CheckableMaterialButton
                android:id="@+id/button_temperature_fridge"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/setup_egg_temperature_fridge" />

            <com.example.eggyapp.ui.checkable_views.CheckableMaterialButton
                android:id="@+id/button_temperature_room"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/setup_egg_temperature_room" />
        </com.example.eggyapp.ui.checkable_views.CheckableButtonGroup>

        <TextView
            android:id="@+id/text_size_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/monsterrat"
            android:text="@string/setup_egg_size"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_temperature_buttons" />

        <com.example.eggyapp.ui.checkable_views.CheckableButtonGroup
            android:id="@+id/group_size_buttons"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_size_title">

            <com.example.eggyapp.ui.checkable_views.CheckableMaterialButton
                android:id="@+id/button_size_s"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/setup_egg_size_S" />

            <com.example.eggyapp.ui.checkable_views.CheckableMaterialButton
                android:id="@+id/button_size_m"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:text="@string/setup_egg_size_M" />

            <com.example.eggyapp.ui.checkable_views.CheckableMaterialButton
                android:id="@+id/button_size_l"
                style="@style/OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/setup_egg_size_L" />

        </com.example.eggyapp.ui.checkable_views.CheckableButtonGroup>

        <TextView
            android:id="@+id/text_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/monsterrat"
            android:text="@string/setup_egg_type"
            android:textColor="@color/colorBlack"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_size_buttons" />

        <com.example.eggyapp.ui.checkable_views.CheckableButtonGroup
            android:id="@+id/group_type_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="30dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/text_type_title">

            <com.example.eggyapp.ui.checkable_views.ButtonWithImage
                android:id="@+id/button_type_soft"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:image="@drawable/egg_soft"
                app:text="@string/setup_egg_type_soft" />

            <com.example.eggyapp.ui.checkable_views.ButtonWithImage
                android:id="@+id/button_type_medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                app:image="@drawable/egg_medium"
                app:text="@string/setup_egg_type_medium" />

            <com.example.eggyapp.ui.checkable_views.ButtonWithImage
                android:id="@+id/button_type_hard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                app:image="@drawable/egg_hard"
                app:text="@string/setup_egg_type_hard" />
        </com.example.eggyapp.ui.checkable_views.CheckableButtonGroup>

        <TextView
            android:id="@+id/text_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/monsterrat"
            android:text="@string/setup_subtitle"
            android:textColor="@color/colorGrayLight"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@id/text_time"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/text_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/monsterrat"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="8:30 min" />

        <ImageButton
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/button_background"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@id/text_time"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/text_time_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>



