<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extrabold"
        android:includeFontPadding="false"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/textWelcomeTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"
        app:layout_constraintVertical_chainStyle="packed" />

    <leo.apps.eggy.base.presentation.view.NoPaddingTextView
        android:id="@+id/textWelcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/sigmar"
        android:lineSpacingMultiplier="0.6"
        android:text="@string/welcome_screen_title"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@id/textWelcomeSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textAppName" />

    <TextView
        android:id="@+id/textWelcomeSubtitle"
        style="@style/TitleBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:includeFontPadding="false"
        android:text="@string/welcome_screen_subtitle"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/imageEgg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWelcomeTitle" />

    <ImageView
        android:id="@+id/imageEgg"
        android:layout_width="0px"
        android:layout_height="0px"
        android:adjustViewBounds="true"
        android:src="@drawable/welcome_egg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="ContentDescription" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        style="@style/FilledButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginHorizontal="30dp"
        android:text="@string/welcome_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageEgg" />
</androidx.constraintlayout.widget.ConstraintLayout>