<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/workflow_background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">

        <ImageView
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_cook_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cook_eggs_soft"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/view_timer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="CUSTOM TIMER"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_cook_title" />

        <ImageView
            android:id="@+id/icon_time"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/icon_background"
            android:scaleType="center"
            android:src="@drawable/ic_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_timer"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_time_title"
            style="@style/SubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:includeFontPadding="false"
            android:text="@string/cook_boiled_time"
            app:layout_constraintBottom_toBottomOf="@id/icon_time"
            app:layout_constraintStart_toEndOf="@id/icon_time"
            app:layout_constraintTop_toTopOf="@id/icon_time" />

        <TextView
            android:id="@+id/text_time"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="8:30 min"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/icon_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon_time" />

        <ImageView
            android:id="@+id/icon_temperature"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/icon_background"
            android:scaleType="center"
            android:src="@drawable/ic_thermometer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon_time"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_temperature_title"
            style="@style/SubtitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:includeFontPadding="false"
            android:text="@string/cook_water_temperature"
            app:layout_constraintBottom_toBottomOf="@id/icon_temperature"
            app:layout_constraintStart_toEndOf="@id/icon_temperature"
            app:layout_constraintTop_toTopOf="@id/icon_temperature" />

        <TextView
            android:id="@+id/text_temperature"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="100C"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/icon_temperature"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/icon_temperature" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:background="@color/colorGraySuperLight"
            app:layout_constraintTop_toBottomOf="@id/icon_temperature" />

        <TextView
            android:id="@+id/text_tip_title"
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/cook_boiled_tip_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/text_tip"
            style="@style/SubtitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="12dp"
            android:text="@string/cook_boiled_tip"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/text_tip_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_welcome"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="40dp"
            android:text="@string/cook_stop"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_tip" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>